--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,16 +23,21 @@ build:
 requirements:
   build:
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
-    - r-bayestestr >=0.4.0
-    - r-insight >=0.6.0
-    - r-parameters >=0.2.0
+    - r-bayestestr >=0.10.5
+    - r-datawizard >=0.2.0
+    - r-insight >=0.14.3
+    - r-parameters >=0.14.0
+    - r-performance >=0.8.0
   run:
     - r-base
-    - r-bayestestr >=0.4.0
-    - r-insight >=0.6.0
-    - r-parameters >=0.2.0
+    - r-bayestestr >=0.10.5
+    - r-datawizard >=0.2.0
+    - r-insight >=0.14.3
+    - r-parameters >=0.14.0
+    - r-performance >=0.8.0
 
 test:
   commands:
